==============
lxml changelog
==============

Under development
=================

Features added
--------------

Bugs fixed
----------

* lxml.etree could crash when adding more than 10000 namespaces to a
  document

Other changes
-------------


2.0alpha4 (2007-10-07)
======================

Features added
--------------

Bugs fixed
----------

* AttributeError in feed parser on parse errors

Other changes
-------------

* Tag name validation in lxml.etree (and lxml.html) now distinguishes
  between HTML tags and XML tags based on the parser that was used to
  parse or create them.  HTML tags no longer reject any non-ASCII
  characters in tag names but only spaces and the special characters
  ``<>&/"'``.


2.0alpha3 (2007-09-26)
======================

Features added
--------------

* Separate ``feed_error_log`` property for the feed parser interface.
  The normal parser interface and ``iterparse`` continue to use
  ``error_log``.

* The normal parsers and the feed parser interface are now separated
  and can be used concurrently on the same parser instance.

* ``fromstringlist()`` and ``tostringlist()`` functions as in
  ElementTree 1.3

* ``iterparse()`` accepts an ``html`` boolean keyword argument for
  parsing with the HTML parser (note that this interface may be
  subject to change)

* Parsers accept an ``encoding`` keyword argument that overrides the encoding
  of the parsed documents.

* New C-API function ``hasChild()`` to test for children

* ``annotate()`` function in objectify can annotate with Python types and XSI
  types in one step.  Accompanied by ``xsiannotate()`` and ``pyannotate()``.

Bugs fixed
----------

* XML feed parser setup problem

* Type annotation for unicode strings in ``DataElement()``

Other changes
-------------

* lxml.etree now emits a warning if you use XPath with libxml2 2.6.27
  (which can crash on certain XPath errors)

* Type annotation in objectify now preserves the already annotated type by